# Real-time-systems-repo

./: Cargo.toml  README.md  merged_performance.csv  performance_log_normal.csv  run.bat
actuator_proj/: Cargo.toml
actuator_proj/src/: data_structure.rs  lib.rs  main.rs  test.rs
benches/: actuator_transmission_bench.rs  controller_benches.rs  latency_bench.rs
sensor_proj/: Cargo.toml
sensor_proj/src/: lib.rs  main.rs  test.rs
src/: actuator.rs  actuator_lib.rs  controller.rs  controller_lib.rs  data_structure.rs  lib.rs  main.rs  transmission_bench.rs
src/actuator_module/: main.rs
src/sensor_module/: main.rs  mod.rs  sensor.rs  test.rs
