[package]
name = "real-time-systems-repo"
version = "0.1.0"
edition = "2021" 

[dependencies]
tokio = { version = "1.45.1", features = ["full"] }
get_user_input = "0.1.1"
lapin = "2.5.3"
serde = "1.0.219"
serde_json = "1.0.140"
futures-util = "0.3.31"
tracing = "0.1"
tracing-subscriber = "0.3"
rand = "0.9.1"